refactored html files into fitting directories

--- a/html/popup.html
+++ b/html/popup.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style/style.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" href="../style/style.css">
   </head>
   <body>
     <h1>Untitled Shopping Assistant</h1>
@@ -11,6 +10,6 @@
     <textarea id="description" name="description" class="inputField" placeholder="Tell me what you want in your product!"></textarea>
     </div>
     <button id="analyzeBtn">Enable analysis</button>
-    <script type="module" src="js/popup.js"></script>
+    <script type="module" src="../js/popup.js"></script>
   </body>
 </html>
