--- a/html/info-popup.html
+++ b/html/info-popup.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Custom Popup</title>
-   <script src="js/info-popup.js"></script>
+  <title>Your Summary</title>
+   <script src="../js/info-popup.js"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; }
     #responseText { color: #333; }
