Fixed a bug that caused every site to trigger the analyze popup, Added a button to analyze a site from the extension popup

--- a/html/popup.html
+++ b/html/popup.html
@@ -10,6 +10,7 @@
     <textarea id="description" name="description" class="inputField" placeholder="Tell me what you want in your product!"></textarea>
     </div>
     <button id="analyzeBtn">Enable analysis</button>
+    <button id="analyzeSiteBtn">Analyze current site</button>
     <script type="module" src="../js/popup.js"></script>
   </body>
 </html>
